--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 server.port=9091
 spring.application.name=config
-spring.cloud.config.server.git.uri=file://home/subscription-gateway/sgw-git-config
+#spring.cloud.config.server.git.uri=file://home/subscription-gateway/sgw-git-config
+spring.profiles.active=native
+spring.cloud.config.server.native.searchLocations=file:///home/noetic/subscription-gateway/sgw-app-config
+
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=http://192.168.127.159:9092/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:9092/eureka/
